crates/gnr8-core/tests/snapshots/contract_tests__go_contract_test_catalog_spec.snap
---
source: crates/gnr8-core/tests/contract_tests.rs
expression: "file(&generated.files, \"go/contract_test.go\")"
---
package sdk

import (
	"bytes"
	"context"
	"encoding/json"
	"errors"
	"io"
	"net/http"
	"net/url"
	"reflect"
	"testing"
)

// contractRequest is one request the generated client handed to its transport.
type contractRequest struct {
	method string
	path   string
	query  url.Values
	header http.Header
	body   []byte
}

// contractTransport answers canned responses and records what was sent. It is an
// http.RoundTripper, so it replaces the network without changing the client under test.
type contractTransport struct {
	requests  []contractRequest
	responses []*http.Response
}

func (transport *contractTransport) RoundTrip(request *http.Request) (*http.Response, error) {
	recorded := contractRequest{
		method: request.Method,
		path:   request.URL.EscapedPath(),
		query:  request.URL.Query(),
		header: request.Header.Clone(),
	}
	if request.Body != nil {
		payload, err := io.ReadAll(request.Body)
		if err != nil {
			return nil, err
		}
		recorded.body = payload
	}
	transport.requests = append(transport.requests, recorded)
	if len(transport.responses) == 0 {
		return nil, errors.New("contract transport ran out of canned responses")
	}
	response := transport.responses[0]
	transport.responses = transport.responses[1:]
	response.Request = request
	return response, nil
}

func contractResponse(status int, header map[string]string, body string) *http.Response {
	headers := http.Header{}
	for name, value := range header {
		headers.Set(name, value)
	}
	return &http.Response{
		StatusCode: status,
		Header:     headers,
		Body:       io.NopCloser(bytes.NewReader([]byte(body))),
	}
}

func contractClient(transport *contractTransport, opts ...Option) *Client {
	options := []Option{WithHTTPClient(&http.Client{Transport: transport})}
	options = append(options, opts...)
	return NewClient("http://gnr8.test", options...)
}

func contractSingleRequest(t *testing.T, transport *contractTransport) contractRequest {
	t.Helper()
	if len(transport.requests) != 1 {
		t.Fatalf("expected exactly 1 request, got %d", len(transport.requests))
	}
	return transport.requests[0]
}

func assertContractWire(t *testing.T, request contractRequest, method string, path string, query url.Values, header map[string]string) {
	t.Helper()
	if request.method != method {
		t.Fatalf("method: got %q, want %q", request.method, method)
	}
	if request.path != path {
		t.Fatalf("path: got %q, want %q", request.path, path)
	}
	if !reflect.DeepEqual(request.query, query) {
		t.Fatalf("query: got %v, want %v", request.query, query)
	}
	for name, want := range header {
		if got := request.header.Get(name); got != want {
			t.Fatalf("header %s: got %q, want %q", name, got, want)
		}
	}
}

func assertContractBody(t *testing.T, request contractRequest, expected string) {
	t.Helper()
	var sent, want any
	if err := json.Unmarshal(request.body, &sent); err != nil {
		t.Fatalf("request body is not JSON: %v (%s)", err, request.body)
	}
	if err := json.Unmarshal([]byte(expected), &want); err != nil {
		t.Fatalf("expected body is not JSON: %v", err)
	}
	if !reflect.DeepEqual(sent, want) {
		t.Fatalf("request body: got %s, want %s", request.body, expected)
	}
}

func assertContractStatus(t *testing.T, err error, status int) {
	t.Helper()
	var apiErr *APIError
	if !errors.As(err, &apiErr) {
		t.Fatalf("expected *APIError, got %v", err)
	}
	if apiErr.StatusCode != status {
		t.Fatalf("status: got %d, want %d", apiErr.StatusCode, status)
	}
}

func TestRequestShapeListItems(t *testing.T) {
	transport := &contractTransport{responses: []*http.Response{contractResponse(200, map[string]string{"content-type": "application/json"}, "{\"id\":\"gnr8\",\"note\":\"gnr8\"}")}}
	client := contractClient(transport, WithAPIKeyHeader("ApiKeyAuth", "gnr8-contract-key"))
	out, err := client.ListItems(context.Background(), ListItemsParams{Limit: 7})
	if err != nil {
		t.Fatalf("ListItems: %v", err)
	}
	_ = out
	request := contractSingleRequest(t, transport)
	assertContractWire(t, request, "GET", "/items", url.Values{"limit": {"7"}}, map[string]string{"x-api-key": "gnr8-contract-key"})
	if got := out.ID; got != "gnr8" {
		t.Fatalf("ID: got %v, want %v", got, "gnr8")
	}
}

func TestRequestShapeCreateItem(t *testing.T) {
	transport := &contractTransport{responses: []*http.Response{contractResponse(201, map[string]string{"content-type": "application/json"}, "{\"id\":\"gnr8\",\"note\":\"gnr8\"}")}}
	client := contractClient(transport, WithAPIKeyHeader("ApiKeyAuth", "gnr8-contract-key"))
	out, err := client.CreateItem(context.Background(), ItemInput{Title: "gnr8"})
	if err != nil {
		t.Fatalf("CreateItem: %v", err)
	}
	_ = out
	request := contractSingleRequest(t, transport)
	assertContractWire(t, request, "POST", "/items", url.Values{}, map[string]string{"content-type": "application/json", "x-api-key": "gnr8-contract-key"})
	assertContractBody(t, request, "{\"title\":\"gnr8\"}")
	if got := out.ID; got != "gnr8" {
		t.Fatalf("ID: got %v, want %v", got, "gnr8")
	}
}

func TestResponseDecodeListItemsPresent(t *testing.T) {
	transport := &contractTransport{responses: []*http.Response{contractResponse(200, map[string]string{"content-type": "application/json"}, "{\"id\":\"gnr8\",\"note\":\"gnr8\"}")}}
	client := contractClient(transport, WithAPIKeyHeader("ApiKeyAuth", "gnr8-contract-key"))
	out, err := client.ListItems(context.Background(), ListItemsParams{Limit: 7})
	if err != nil {
		t.Fatalf("ListItems: %v", err)
	}
	_ = out
	request := contractSingleRequest(t, transport)
	assertContractWire(t, request, "GET", "/items", url.Values{"limit": {"7"}}, map[string]string{"x-api-key": "gnr8-contract-key"})
	if got := out.ID; got != "gnr8" {
		t.Fatalf("ID: got %v, want %v", got, "gnr8")
	}
}

func TestResponseDecodeListItemsAbsent(t *testing.T) {
	transport := &contractTransport{responses: []*http.Response{contractResponse(200, map[string]string{"content-type": "application/json"}, "{\"id\":\"gnr8\"}")}}
	client := contractClient(transport, WithAPIKeyHeader("ApiKeyAuth", "gnr8-contract-key"))
	out, err := client.ListItems(context.Background(), ListItemsParams{Limit: 7})
	if err != nil {
		t.Fatalf("ListItems: %v", err)
	}
	_ = out
	request := contractSingleRequest(t, transport)
	assertContractWire(t, request, "GET", "/items", url.Values{"limit": {"7"}}, map[string]string{"x-api-key": "gnr8-contract-key"})
	if out.Note != nil {
		t.Fatalf("Note: expected an absent field, got %v", out.Note)
	}
}

func TestResponseDecodeCreateItemPresent(t *testing.T) {
	transport := &contractTransport{responses: []*http.Response{contractResponse(201, map[string]string{"content-type": "application/json"}, "{\"id\":\"gnr8\",\"note\":\"gnr8\"}")}}
	client := contractClient(transport, WithAPIKeyHeader("ApiKeyAuth", "gnr8-contract-key"))
	out, err := client.CreateItem(context.Background(), ItemInput{Title: "gnr8"})
	if err != nil {
		t.Fatalf("CreateItem: %v", err)
	}
	_ = out
	request := contractSingleRequest(t, transport)
	assertContractWire(t, request, "POST", "/items", url.Values{}, map[string]string{"content-type": "application/json", "x-api-key": "gnr8-contract-key"})
	assertContractBody(t, request, "{\"title\":\"gnr8\"}")
	if got := out.ID; got != "gnr8" {
		t.Fatalf("ID: got %v, want %v", got, "gnr8")
	}
}

func TestResponseDecodeCreateItemAbsent(t *testing.T) {
	transport := &contractTransport{responses: []*http.Response{contractResponse(201, map[string]string{"content-type": "application/json"}, "{\"id\":\"gnr8\"}")}}
	client := contractClient(transport, WithAPIKeyHeader("ApiKeyAuth", "gnr8-contract-key"))
	out, err := client.CreateItem(context.Background(), ItemInput{Title: "gnr8"})
	if err != nil {
		t.Fatalf("CreateItem: %v", err)
	}
	_ = out
	request := contractSingleRequest(t, transport)
	assertContractWire(t, request, "POST", "/items", url.Values{}, map[string]string{"content-type": "application/json", "x-api-key": "gnr8-contract-key"})
	assertContractBody(t, request, "{\"title\":\"gnr8\"}")
	if out.Note != nil {
		t.Fatalf("Note: expected an absent field, got %v", out.Note)
	}
}

func TestTypedErrorListItems400(t *testing.T) {
	transport := &contractTransport{responses: []*http.Response{contractResponse(400, map[string]string{"content-type": "application/json"}, "{\"message\":\"contract test error\",\"slug\":\"contract_test_error\"}")}}
	client := contractClient(transport, WithAPIKeyHeader("ApiKeyAuth", "gnr8-contract-key"))
	out, err := client.ListItems(context.Background(), ListItemsParams{Limit: 7})
	_ = out
	assertContractStatus(t, err, 400)
	request := contractSingleRequest(t, transport)
	assertContractWire(t, request, "GET", "/items", url.Values{"limit": {"7"}}, map[string]string{"x-api-key": "gnr8-contract-key"})
}

func TestTypedErrorCreateItem404(t *testing.T) {
	transport := &contractTransport{responses: []*http.Response{contractResponse(404, map[string]string{"content-type": "application/json"}, "{\"message\":\"contract test error\",\"slug\":\"contract_test_error\"}")}}
	client := contractClient(transport, WithAPIKeyHeader("ApiKeyAuth", "gnr8-contract-key"))
	out, err := client.CreateItem(context.Background(), ItemInput{Title: "gnr8"})
	_ = out
	assertContractStatus(t, err, 404)
	request := contractSingleRequest(t, transport)
	assertContractWire(t, request, "POST", "/items", url.Values{}, map[string]string{"content-type": "application/json", "x-api-key": "gnr8-contract-key"})
	assertContractBody(t, request, "{\"title\":\"gnr8\"}")
}

func TestAuthListItems(t *testing.T) {
	transport := &contractTransport{responses: []*http.Response{contractResponse(200, map[string]string{"content-type": "application/json"}, "{\"id\":\"gnr8\",\"note\":\"gnr8\"}")}}
	client := contractClient(transport, WithAPIKeyHeader("ApiKeyAuth", "gnr8-contract-key"))
	out, err := client.ListItems(context.Background(), ListItemsParams{Limit: 7})
	if err != nil {
		t.Fatalf("ListItems: %v", err)
	}
	_ = out
	request := contractSingleRequest(t, transport)
	assertContractWire(t, request, "GET", "/items", url.Values{"limit": {"7"}}, map[string]string{"x-api-key": "gnr8-contract-key"})
}

func TestRedirectPolicyListItems(t *testing.T) {
	transport := &contractTransport{responses: []*http.Response{contractResponse(302, map[string]string{"location": "http://gnr8.test/moved"}, "")}}
	client := contractClient(transport, WithAPIKeyHeader("ApiKeyAuth", "gnr8-contract-key"))
	out, err := client.ListItems(context.Background(), ListItemsParams{Limit: 7})
	_ = out
	assertContractStatus(t, err, 302)
	// The 0.11 contract: a redirect is surfaced, never followed, unless the
	// caller opts in with WithFollowRedirects.
	request := contractSingleRequest(t, transport)
	assertContractWire(t, request, "GET", "/items", url.Values{"limit": {"7"}}, map[string]string{"x-api-key": "gnr8-contract-key"})
}
