crates/gnr8-core/tests/snapshots/contract_tests__go_contract_test_shapes_spec.snap
---
source: crates/gnr8-core/tests/contract_tests.rs
expression: text
---
package sdk

import (
	"bytes"
	"context"
	"encoding/json"
	"errors"
	"io"
	"net/http"
	"net/url"
	"reflect"
	"testing"
	"time"
)

// contractRequest is one request the generated client handed to its transport.
type contractRequest struct {
	method string
	path   string
	query  url.Values
	header http.Header
	body   []byte
}

// contractTransport answers canned responses and records what was sent. It is an
// http.RoundTripper, so it replaces the network without changing the client under test.
type contractTransport struct {
	requests  []contractRequest
	responses []*http.Response
}

func (transport *contractTransport) RoundTrip(request *http.Request) (*http.Response, error) {
	recorded := contractRequest{
		method: request.Method,
		path:   request.URL.Path,
		query:  request.URL.Query(),
		header: request.Header.Clone(),
	}
	if request.Body != nil {
		payload, err := io.ReadAll(request.Body)
		if err != nil {
			return nil, err
		}
		recorded.body = payload
	}
	transport.requests = append(transport.requests, recorded)
	if len(transport.responses) == 0 {
		return nil, errors.New("contract transport ran out of canned responses")
	}
	response := transport.responses[0]
	transport.responses = transport.responses[1:]
	response.Request = request
	return response, nil
}

func contractResponse(status int, header map[string]string, body string) *http.Response {
	headers := http.Header{}
	for name, value := range header {
		headers.Set(name, value)
	}
	return &http.Response{
		StatusCode: status,
		Header:     headers,
		Body:       io.NopCloser(bytes.NewReader([]byte(body))),
	}
}

func contractClient(transport *contractTransport, opts ...Option) *Client {
	options := []Option{WithHTTPClient(&http.Client{Transport: transport})}
	options = append(options, opts...)
	return NewClient("http://gnr8.test", options...)
}

func contractSingleRequest(t *testing.T, transport *contractTransport) contractRequest {
	t.Helper()
	if len(transport.requests) != 1 {
		t.Fatalf("expected exactly 1 request, got %d", len(transport.requests))
	}
	return transport.requests[0]
}

func assertContractWire(t *testing.T, request contractRequest, method string, path string, query url.Values, header map[string]string) {
	t.Helper()
	if request.method != method {
		t.Fatalf("method: got %q, want %q", request.method, method)
	}
	if request.path != path {
		t.Fatalf("path: got %q, want %q", request.path, path)
	}
	if !reflect.DeepEqual(request.query, query) {
		t.Fatalf("query: got %v, want %v", request.query, query)
	}
	for name, want := range header {
		if got := request.header.Get(name); got != want {
			t.Fatalf("header %s: got %q, want %q", name, got, want)
		}
	}
}

func assertContractBody(t *testing.T, request contractRequest, expected string) {
	t.Helper()
	var sent, want any
	if err := json.Unmarshal(request.body, &sent); err != nil {
		t.Fatalf("request body is not JSON: %v (%s)", err, request.body)
	}
	if err := json.Unmarshal([]byte(expected), &want); err != nil {
		t.Fatalf("expected body is not JSON: %v", err)
	}
	if !reflect.DeepEqual(sent, want) {
		t.Fatalf("request body: got %s, want %s", request.body, expected)
	}
}

func assertContractStatus(t *testing.T, err error, status int) {
	t.Helper()
	var apiErr *APIError
	if !errors.As(err, &apiErr) {
		t.Fatalf("expected *APIError, got %v", err)
	}
	if apiErr.StatusCode != status {
		t.Fatalf("status: got %d, want %d", apiErr.StatusCode, status)
	}
}

func contractTime(value string) time.Time {
	parsed, err := time.Parse(time.RFC3339, value)
	if err != nil {
		panic("contract test time literal: " + err.Error())
	}
	return parsed
}

func TestRequestShapeUpdateAuthor(t *testing.T) {
	transport := &contractTransport{responses: []*http.Response{contractResponse(200, map[string]string{"content-type": "application/json"}, "{\"name\":\"gnr8\",\"nickname\":\"gnr8\"}")}}
	client := contractClient(transport)
	out, err := client.UpdateAuthor(context.Background(), "gnr8", &Author{Name: "gnr8"})
	if err != nil {
		t.Fatalf("UpdateAuthor: %v", err)
	}
	_ = out
	request := contractSingleRequest(t, transport)
	assertContractWire(t, request, "PUT", "/authors/gnr8", url.Values{}, map[string]string{"content-type": "application/json"})
	assertContractBody(t, request, "{\"name\":\"gnr8\"}")
	if got := out.Name; got != "gnr8" {
		t.Fatalf("Name: got %v, want %v", got, "gnr8")
	}
}

func TestRequestShapeListBooks(t *testing.T) {
	transport := &contractTransport{responses: []*http.Response{contractResponse(200, map[string]string{"content-type": "application/json"}, "[{\"author\":{\"name\":\"gnr8\",\"nickname\":\"gnr8\"},\"coauthors\":[{\"name\":\"gnr8\",\"nickname\":\"gnr8\"}],\"genre\":\"fiction\",\"note\":\"gnr8\",\"published\":\"2024-01-02T03:04:05Z\",\"ratings\":{\"key\":7},\"tags\":[\"gnr8\"],\"title\":\"gnr8\"}]")}}
	client := contractClient(transport, WithBearerToken("gnr8-contract-token"))
	out, err := client.ListBooks(context.Background(), ListBooksParams{XTrace: "gnr8", Genre: Ptr[Genre](Genre("fiction")), Limit: Ptr[int64](7)})
	if err != nil {
		t.Fatalf("ListBooks: %v", err)
	}
	_ = out
	request := contractSingleRequest(t, transport)
	assertContractWire(t, request, "GET", "/books", url.Values{"genre": {"fiction"}, "limit": {"7"}}, map[string]string{"authorization": "Bearer gnr8-contract-token", "x-trace": "gnr8"})
}

func TestRequestShapeCreateBook(t *testing.T) {
	transport := &contractTransport{responses: []*http.Response{contractResponse(201, map[string]string{"content-type": "application/json"}, "{\"author\":{\"name\":\"gnr8\",\"nickname\":\"gnr8\"},\"coauthors\":[{\"name\":\"gnr8\",\"nickname\":\"gnr8\"}],\"genre\":\"fiction\",\"note\":\"gnr8\",\"published\":\"2024-01-02T03:04:05Z\",\"ratings\":{\"key\":7},\"tags\":[\"gnr8\"],\"title\":\"gnr8\"}")}}
	client := contractClient(transport, WithBasicAuth("gnr8", "contract"))
	out, err := client.CreateBook(context.Background(), CreateBookApplicationJSONBody{Value: Book{Author: Author{Name: "gnr8"}, Coauthors: []Author{Author{Name: "gnr8"}}, Genre: Genre("fiction"), Published: contractTime("2024-01-02T03:04:05Z"), Ratings: map[string]int64{"key": 7}, Tags: []string{"gnr8"}, Title: "gnr8"}})
	if err != nil {
		t.Fatalf("CreateBook: %v", err)
	}
	_ = out
	request := contractSingleRequest(t, transport)
	assertContractWire(t, request, "POST", "/books", url.Values{}, map[string]string{"authorization": "Basic Z25yODpjb250cmFjdA==", "content-type": "application/json"})
	assertContractBody(t, request, "{\"author\":{\"name\":\"gnr8\"},\"coauthors\":[{\"name\":\"gnr8\"}],\"genre\":\"fiction\",\"published\":\"2024-01-02T03:04:05Z\",\"ratings\":{\"key\":7},\"tags\":[\"gnr8\"],\"title\":\"gnr8\"}")
	if got := out.Title; got != "gnr8" {
		t.Fatalf("Title: got %v, want %v", got, "gnr8")
	}
}

func TestBodySelectionCreateBookApplicationJSON(t *testing.T) {
	transport := &contractTransport{responses: []*http.Response{contractResponse(201, map[string]string{"content-type": "application/json"}, "{\"author\":{\"name\":\"gnr8\",\"nickname\":\"gnr8\"},\"coauthors\":[{\"name\":\"gnr8\",\"nickname\":\"gnr8\"}],\"genre\":\"fiction\",\"note\":\"gnr8\",\"published\":\"2024-01-02T03:04:05Z\",\"ratings\":{\"key\":7},\"tags\":[\"gnr8\"],\"title\":\"gnr8\"}")}}
	client := contractClient(transport, WithBasicAuth("gnr8", "contract"))
	out, err := client.CreateBook(context.Background(), CreateBookApplicationJSONBody{Value: Book{Author: Author{Name: "gnr8"}, Coauthors: []Author{Author{Name: "gnr8"}}, Genre: Genre("fiction"), Published: contractTime("2024-01-02T03:04:05Z"), Ratings: map[string]int64{"key": 7}, Tags: []string{"gnr8"}, Title: "gnr8"}})
	if err != nil {
		t.Fatalf("CreateBook: %v", err)
	}
	_ = out
	request := contractSingleRequest(t, transport)
	assertContractWire(t, request, "POST", "/books", url.Values{}, map[string]string{"authorization": "Basic Z25yODpjb250cmFjdA==", "content-type": "application/json"})
	assertContractBody(t, request, "{\"author\":{\"name\":\"gnr8\"},\"coauthors\":[{\"name\":\"gnr8\"}],\"genre\":\"fiction\",\"published\":\"2024-01-02T03:04:05Z\",\"ratings\":{\"key\":7},\"tags\":[\"gnr8\"],\"title\":\"gnr8\"}")
}

func TestBodySelectionCreateBookApplicationVndShapesJSON(t *testing.T) {
	transport := &contractTransport{responses: []*http.Response{contractResponse(201, map[string]string{"content-type": "application/json"}, "{\"author\":{\"name\":\"gnr8\",\"nickname\":\"gnr8\"},\"coauthors\":[{\"name\":\"gnr8\",\"nickname\":\"gnr8\"}],\"genre\":\"fiction\",\"note\":\"gnr8\",\"published\":\"2024-01-02T03:04:05Z\",\"ratings\":{\"key\":7},\"tags\":[\"gnr8\"],\"title\":\"gnr8\"}")}}
	client := contractClient(transport, WithBasicAuth("gnr8", "contract"))
	out, err := client.CreateBook(context.Background(), CreateBookApplicationVndShapesJSONBody{Value: Book{Author: Author{Name: "gnr8"}, Coauthors: []Author{Author{Name: "gnr8"}}, Genre: Genre("fiction"), Published: contractTime("2024-01-02T03:04:05Z"), Ratings: map[string]int64{"key": 7}, Tags: []string{"gnr8"}, Title: "gnr8"}})
	if err != nil {
		t.Fatalf("CreateBook: %v", err)
	}
	_ = out
	request := contractSingleRequest(t, transport)
	assertContractWire(t, request, "POST", "/books", url.Values{}, map[string]string{"authorization": "Basic Z25yODpjb250cmFjdA==", "content-type": "application/vnd.shapes+json"})
	assertContractBody(t, request, "{\"author\":{\"name\":\"gnr8\"},\"coauthors\":[{\"name\":\"gnr8\"}],\"genre\":\"fiction\",\"published\":\"2024-01-02T03:04:05Z\",\"ratings\":{\"key\":7},\"tags\":[\"gnr8\"],\"title\":\"gnr8\"}")
}

func TestResponseDecodeUpdateAuthorPresent(t *testing.T) {
	transport := &contractTransport{responses: []*http.Response{contractResponse(200, map[string]string{"content-type": "application/json"}, "{\"name\":\"gnr8\",\"nickname\":\"gnr8\"}")}}
	client := contractClient(transport)
	out, err := client.UpdateAuthor(context.Background(), "gnr8", &Author{Name: "gnr8"})
	if err != nil {
		t.Fatalf("UpdateAuthor: %v", err)
	}
	_ = out
	request := contractSingleRequest(t, transport)
	assertContractWire(t, request, "PUT", "/authors/gnr8", url.Values{}, map[string]string{"content-type": "application/json"})
	assertContractBody(t, request, "{\"name\":\"gnr8\"}")
	if got := out.Name; got != "gnr8" {
		t.Fatalf("Name: got %v, want %v", got, "gnr8")
	}
}

func TestResponseDecodeUpdateAuthorAbsent(t *testing.T) {
	transport := &contractTransport{responses: []*http.Response{contractResponse(200, map[string]string{"content-type": "application/json"}, "{\"name\":\"gnr8\"}")}}
	client := contractClient(transport)
	out, err := client.UpdateAuthor(context.Background(), "gnr8", &Author{Name: "gnr8"})
	if err != nil {
		t.Fatalf("UpdateAuthor: %v", err)
	}
	_ = out
	request := contractSingleRequest(t, transport)
	assertContractWire(t, request, "PUT", "/authors/gnr8", url.Values{}, map[string]string{"content-type": "application/json"})
	assertContractBody(t, request, "{\"name\":\"gnr8\"}")
	if out.Nickname != nil {
		t.Fatalf("Nickname: expected an absent field, got %v", out.Nickname)
	}
}

func TestResponseDecodeListBooksPresent(t *testing.T) {
	transport := &contractTransport{responses: []*http.Response{contractResponse(200, map[string]string{"content-type": "application/json"}, "[{\"author\":{\"name\":\"gnr8\",\"nickname\":\"gnr8\"},\"coauthors\":[{\"name\":\"gnr8\",\"nickname\":\"gnr8\"}],\"genre\":\"fiction\",\"note\":\"gnr8\",\"published\":\"2024-01-02T03:04:05Z\",\"ratings\":{\"key\":7},\"tags\":[\"gnr8\"],\"title\":\"gnr8\"}]")}}
	client := contractClient(transport, WithBearerToken("gnr8-contract-token"))
	out, err := client.ListBooks(context.Background(), ListBooksParams{XTrace: "gnr8", Genre: Ptr[Genre](Genre("fiction")), Limit: Ptr[int64](7)})
	if err != nil {
		t.Fatalf("ListBooks: %v", err)
	}
	_ = out
	request := contractSingleRequest(t, transport)
	assertContractWire(t, request, "GET", "/books", url.Values{"genre": {"fiction"}, "limit": {"7"}}, map[string]string{"authorization": "Bearer gnr8-contract-token", "x-trace": "gnr8"})
}

func TestResponseDecodeCreateBookPresent(t *testing.T) {
	transport := &contractTransport{responses: []*http.Response{contractResponse(201, map[string]string{"content-type": "application/json"}, "{\"author\":{\"name\":\"gnr8\",\"nickname\":\"gnr8\"},\"coauthors\":[{\"name\":\"gnr8\",\"nickname\":\"gnr8\"}],\"genre\":\"fiction\",\"note\":\"gnr8\",\"published\":\"2024-01-02T03:04:05Z\",\"ratings\":{\"key\":7},\"tags\":[\"gnr8\"],\"title\":\"gnr8\"}")}}
	client := contractClient(transport, WithBasicAuth("gnr8", "contract"))
	out, err := client.CreateBook(context.Background(), CreateBookApplicationJSONBody{Value: Book{Author: Author{Name: "gnr8"}, Coauthors: []Author{Author{Name: "gnr8"}}, Genre: Genre("fiction"), Published: contractTime("2024-01-02T03:04:05Z"), Ratings: map[string]int64{"key": 7}, Tags: []string{"gnr8"}, Title: "gnr8"}})
	if err != nil {
		t.Fatalf("CreateBook: %v", err)
	}
	_ = out
	request := contractSingleRequest(t, transport)
	assertContractWire(t, request, "POST", "/books", url.Values{}, map[string]string{"authorization": "Basic Z25yODpjb250cmFjdA==", "content-type": "application/json"})
	assertContractBody(t, request, "{\"author\":{\"name\":\"gnr8\"},\"coauthors\":[{\"name\":\"gnr8\"}],\"genre\":\"fiction\",\"published\":\"2024-01-02T03:04:05Z\",\"ratings\":{\"key\":7},\"tags\":[\"gnr8\"],\"title\":\"gnr8\"}")
	if got := out.Title; got != "gnr8" {
		t.Fatalf("Title: got %v, want %v", got, "gnr8")
	}
}

func TestResponseDecodeCreateBookAbsent(t *testing.T) {
	transport := &contractTransport{responses: []*http.Response{contractResponse(201, map[string]string{"content-type": "application/json"}, "{\"author\":{\"name\":\"gnr8\",\"nickname\":\"gnr8\"},\"coauthors\":[{\"name\":\"gnr8\",\"nickname\":\"gnr8\"}],\"genre\":\"fiction\",\"published\":\"2024-01-02T03:04:05Z\",\"ratings\":{\"key\":7},\"tags\":[\"gnr8\"],\"title\":\"gnr8\"}")}}
	client := contractClient(transport, WithBasicAuth("gnr8", "contract"))
	out, err := client.CreateBook(context.Background(), CreateBookApplicationJSONBody{Value: Book{Author: Author{Name: "gnr8"}, Coauthors: []Author{Author{Name: "gnr8"}}, Genre: Genre("fiction"), Published: contractTime("2024-01-02T03:04:05Z"), Ratings: map[string]int64{"key": 7}, Tags: []string{"gnr8"}, Title: "gnr8"}})
	if err != nil {
		t.Fatalf("CreateBook: %v", err)
	}
	_ = out
	request := contractSingleRequest(t, transport)
	assertContractWire(t, request, "POST", "/books", url.Values{}, map[string]string{"authorization": "Basic Z25yODpjb250cmFjdA==", "content-type": "application/json"})
	assertContractBody(t, request, "{\"author\":{\"name\":\"gnr8\"},\"coauthors\":[{\"name\":\"gnr8\"}],\"genre\":\"fiction\",\"published\":\"2024-01-02T03:04:05Z\",\"ratings\":{\"key\":7},\"tags\":[\"gnr8\"],\"title\":\"gnr8\"}")
	if out.Note != nil {
		t.Fatalf("Note: expected an absent field, got %v", out.Note)
	}
}

func TestTypedErrorUpdateAuthor400(t *testing.T) {
	transport := &contractTransport{responses: []*http.Response{contractResponse(400, map[string]string{"content-type": "application/json"}, "{\"message\":\"contract test error\",\"slug\":\"contract_test_error\"}")}}
	client := contractClient(transport)
	out, err := client.UpdateAuthor(context.Background(), "gnr8", &Author{Name: "gnr8"})
	_ = out
	assertContractStatus(t, err, 400)
	request := contractSingleRequest(t, transport)
	assertContractWire(t, request, "PUT", "/authors/gnr8", url.Values{}, map[string]string{"content-type": "application/json"})
	assertContractBody(t, request, "{\"name\":\"gnr8\"}")
}

func TestAuthListBooks(t *testing.T) {
	transport := &contractTransport{responses: []*http.Response{contractResponse(200, map[string]string{"content-type": "application/json"}, "[{\"author\":{\"name\":\"gnr8\",\"nickname\":\"gnr8\"},\"coauthors\":[{\"name\":\"gnr8\",\"nickname\":\"gnr8\"}],\"genre\":\"fiction\",\"note\":\"gnr8\",\"published\":\"2024-01-02T03:04:05Z\",\"ratings\":{\"key\":7},\"tags\":[\"gnr8\"],\"title\":\"gnr8\"}]")}}
	client := contractClient(transport, WithBearerToken("gnr8-contract-token"))
	out, err := client.ListBooks(context.Background(), ListBooksParams{XTrace: "gnr8", Genre: Ptr[Genre](Genre("fiction")), Limit: Ptr[int64](7)})
	if err != nil {
		t.Fatalf("ListBooks: %v", err)
	}
	_ = out
	request := contractSingleRequest(t, transport)
	assertContractWire(t, request, "GET", "/books", url.Values{"genre": {"fiction"}, "limit": {"7"}}, map[string]string{"authorization": "Bearer gnr8-contract-token", "x-trace": "gnr8"})
}

func TestAuthCreateBook(t *testing.T) {
	transport := &contractTransport{responses: []*http.Response{contractResponse(201, map[string]string{"content-type": "application/json"}, "{\"author\":{\"name\":\"gnr8\",\"nickname\":\"gnr8\"},\"coauthors\":[{\"name\":\"gnr8\",\"nickname\":\"gnr8\"}],\"genre\":\"fiction\",\"note\":\"gnr8\",\"published\":\"2024-01-02T03:04:05Z\",\"ratings\":{\"key\":7},\"tags\":[\"gnr8\"],\"title\":\"gnr8\"}")}}
	client := contractClient(transport, WithBasicAuth("gnr8", "contract"))
	out, err := client.CreateBook(context.Background(), CreateBookApplicationJSONBody{Value: Book{Author: Author{Name: "gnr8"}, Coauthors: []Author{Author{Name: "gnr8"}}, Genre: Genre("fiction"), Published: contractTime("2024-01-02T03:04:05Z"), Ratings: map[string]int64{"key": 7}, Tags: []string{"gnr8"}, Title: "gnr8"}})
	if err != nil {
		t.Fatalf("CreateBook: %v", err)
	}
	_ = out
	request := contractSingleRequest(t, transport)
	assertContractWire(t, request, "POST", "/books", url.Values{}, map[string]string{"authorization": "Basic Z25yODpjb250cmFjdA==", "content-type": "application/json"})
	assertContractBody(t, request, "{\"author\":{\"name\":\"gnr8\"},\"coauthors\":[{\"name\":\"gnr8\"}],\"genre\":\"fiction\",\"published\":\"2024-01-02T03:04:05Z\",\"ratings\":{\"key\":7},\"tags\":[\"gnr8\"],\"title\":\"gnr8\"}")
}

func TestRedirectPolicyUpdateAuthor(t *testing.T) {
	transport := &contractTransport{responses: []*http.Response{contractResponse(302, map[string]string{"location": "http://gnr8.test/moved"}, "")}}
	client := contractClient(transport)
	out, err := client.UpdateAuthor(context.Background(), "gnr8", &Author{Name: "gnr8"})
	_ = out
	assertContractStatus(t, err, 302)
	// The 0.11 contract: a redirect is surfaced, never followed, unless the
	// caller opts in with WithFollowRedirects.
	request := contractSingleRequest(t, transport)
	assertContractWire(t, request, "PUT", "/authors/gnr8", url.Values{}, map[string]string{"content-type": "application/json"})
	assertContractBody(t, request, "{\"name\":\"gnr8\"}")
}
